--- a/main.html
+++ b/main.html
@@ -10,16 +10,16 @@
 	<!-- the entire body must be written by student -->
 	<nav>
 		<ul>
-			<a href="www.google.com">Home</a>
-			<a href="www.google.com">About us</a>
-			<a href="www.google.com">Contact us</a>
+			<a href="https://google.com">Home</a>
+			<a href="https://google.com">About us</a>
+			<a href="https://google.com">Contact us</a>
 		</ul>
-		
-		<h1>3 random audios</h1>
-			<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg"></audio>
-			<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg"></audio>
-			<audio controls src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg"></audio>
 	</nav>
+		<h1>3 random audios</h1>
+			<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">Audio not available</audio>
+			<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">Audio not available</audio>
+			<audio controls src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">Audio not available</audio>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
